- CHG: Adjusted return types.